# skypro_hw_27

./: boot.sh  manage.py  pyproject.toml  requirements.txt  sandbox.py  setup.cfg
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_alter_ad_author.py  0004_selection.py  0005_category_slug.py  0006_alter_ad_description_alter_ad_is_published_and_more.py  0007_alter_category_slug.py  0008_alter_category_slug.py
ads/urls/: ad.py  cat.py
datasets/: converter.py  sandbox.py  user.json
shmavito/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py  simple_tests.py  test_example.py
tests/ads/: ad_list_tests.py  ad_retrieve_tests.py  create_ad_tests.py
tests/selection/: create_selection_tests.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_location.py  0003_remove_user_location_user_location.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_alter_user_age.py  0006_remove_user_age_user_birth_date_alter_user_email.py
